# perform

./: .coveragerc  .flake8  .gitignore  Jacobians.py  LICENSE  README.md  boundaryFuncs.py  classDefs.py  constants.py  driver.py  inputFuncs.py  outputFuncs.py  pyproject.toml  romClasses.py  setup.cfg  setup.py  solution.py  solver.py  spaceSchemes.py  stateFuncs.py  timeSchemes.py
.github/workflows/: perform_basic.yml  perform_intesive.yml
Error&Field_vis/: field_vis.py
Training/: hyperoptimize.py  scaling.py
caseFiles/advectingFlame/: global1.chem  mesh_0to0.01_256c.inp  solverParams.inp
caseFiles/advectingFlame_forced/: solverParams.inp
caseFiles/standingFlame_forced/: solverParams.inp
doc/: Makefile  conf.py  index.rst  refs.bib
doc/roms/: caetcn.rst  liftlearn.rst  linearproj.rst  linearsub.rst  nonlinproj.rst  nonlinsub.rst  rominputs.rst  (+1 more)
nick_test_dir/: global1.cti  solverParams.inp
paper/: paper.bib  paper.md
perform/: Jacobians.py  constants.py  driver.py  higherOrderFuncs.py  higher_order_funcs.py  inputFuncs.py  input_funcs.py  jacobians.py  mesh.py  miscFuncs.py  misc_funcs.py  spaceSchemes.py  space_schemes.py  systemSolver.py  system_solver.py
pygems1d/: Jacobians.py  constants.py  driver.py  gasModel.py  higherOrderFuncs.py  inputFuncs.py  mesh.py  miscFuncs.py  outputFuncs.py  solution.py  spaceSchemes.py  stateFuncs.py  systemSolver.py
src/: Jacobians.py  boundaryFuncs.py  classDefs.py  constants.py  driver.py  higherOrderFuncs.py  inputFuncs.py  mesh.py  miscFuncs.py  outputFuncs.py  romClasses.py  solution.py  solver.py  spaceSchemes.py  stateFuncs.py  systemSolver.py  timeIntegrator.py  timeSchemes.py
tests/: constants.py  run_tests.sh  test_constants.py  test_mesh.py  test_misc_funcs.py  test_suite.py  test_system_solver.py
utils/: calcMeanFlowConditions.py  calcStagTempPress.py  calc_mean_flow_conditions.py  genPODBasis.py  gen_pod_basis.py  plotPODEnergyDecay.py  plotPSD.py
(+243 files in other folders)
